# wasm_quicksort_example

./: README.md
examples/cra-full/: package.json
examples/cra_full/: package-lock.json
examples/cra_full/src/: App.tsx
examples/create-react-app/: README.md  package-lock.json  package.json
examples/js-dep-lib/: README.md
examples/js-dep-lib/examples/nextjs-wasm-dep/: README.md  package-lock.json  package.json
examples/js-dep-lib/project/: README.md  package-lock.json  package.json  rollup.config.js
examples/nextjs/: README.md  package-lock.json
examples/nextjs-example/: package.json
examples/nextjs-example/pages/: index.js
examples/node/: README.md  main.js  package-lock.json  package.json
examples/script-tag-full/: README.md  index.html
examples/script-tag-slim/: README.md  index.html
examples/script_tag/: README.md  index.html
examples/script_tag_full/: index.html
examples/script_tag_slim/: index.html
examples/svelte-kit/: README.md  package-lock.json  package.json
examples/svelte-kit-example/: package.json
examples/svelte-rollup/: README.md  package-lock.json  package.json
examples/svelte-rollup/src/: App.svelte
examples/svelte-vite/: README.md  package-lock.json  package.json
examples/svelte-vite-example/: package-lock.json  package.json
examples/svelte-vite-example/src/: App.svelte
examples/svelte-webpack/: README.md  package-lock.json  package.json
examples/svelte-webpack-example/: package-lock.json
examples/svelte-webpack/src/: App.svelte
examples/wasm-dep-lib/: Cargo.toml  README.md
examples/wasm-dep-lib/project/: README.md  package-lock.json  package.json  rollup.config.js
examples/wasm-dep-lib/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm_quicksort_example/: README.md  build.sh  package-lock.json  package.json  rollup.config.js
wasm_quicksort_example/crate/: Cargo.toml  README.md
wasm_quicksort_example/crate/src/: lib.rs
wasm_quicksort_example/src/: index.ts  index_core.ts  quicksort_wrapper.ts
(+15 files in other folders)
