[package]
name = "wasm-quicksort-example"
version = "0.0.1"
authors = ["K <kelseydrhoda@gmail.com>"]
edition = "2018"
repository = "https://github.com/krhoda/wasm_quicksort_example/"
description = "An example repository showing how to create well-typed, highly portable WASM libraries using a narrow, opinionated approach to project structure"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

serde = {version = "1", features = ["derive"]}
serde_json = "1"
tsify = "0.4.5"
wasm-bindgen = "0.2.84"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
